fix: image and gap sizes

--- a/frontend/src/assets/css/LandingPage.css
+++ b/frontend/src/assets/css/LandingPage.css
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 10px;
 }
 
 .banner {
@@ -19,12 +20,13 @@
 }
 
 .logo {
-    width: 140px;
+    width: 120px;
 }
 
 nav ul li {
     display: inline-block;
-    padding: 0.5rem;
+    padding: 0.2rem;
+    font-size: 14px;
 }
 
 nav ul li a{
@@ -52,7 +54,7 @@ nav ul li a{
 }
 
 .serviceImage {
-    width: 180px;
+    width: 150px;
     border-radius: 10px;
     height: 100px;
     object-fit: cover;
@@ -69,7 +71,7 @@ nav ul li a{
 .services {
     margin: 1rem;
     display: flex;
-    gap: 20px;
+    gap: 10px;
     justify-content: center;
     align-items: center;
 }
